# student-grader

./: Dockerfile  README.md
data/: README.md
docs/: ESSAY.md  logbook.txt  tree.txt
progress/: pyproject.toml
progress/check/: __init__.py  auth.py  check.py
progress/progress/: __init__.py  analyse.py  auth.py
progress/progress.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
progress/scripts/: activate  deactivate
student_grader/core_logic/: __init__.py  score_statistics.py
student_grader/data/: README.md  clients.csv  students.csv
student_grader/exceptions/: __init__.py  exceptions.py
student_grader/services/: __init__.py  check_client_key.py  student_service.py
